--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
     <link rel="stylesheet" href="column-rule-style.css">
   </head>
   <body>
+    <header>
+      <code>npm install --save-dev css-column-rule-style</code>
+    </header>
+    <main>
+    </main>
+    <footer>
+    </footer>
 </body>
 </html>
